fixed ui and added missing translations for hide assets

--- a/frontend/src/modules/assetManagement/less/asset.less
+++ b/frontend/src/modules/assetManagement/less/asset.less
@@ -231,6 +231,9 @@
     &-inner {
         padding:30px;
     }
+    .hide-asset-help {
+      width: 100%;
+    }
 }
 
 .asset-management-modal-new-asset-close {
