--- a/frontend/src/modules/assetManagement/templates/assetManagementListItem.hbs
+++ b/frontend/src/modules/assetManagement/templates/assetManagementListItem.hbs
@@ -25,7 +25,7 @@
             {{/ifValueEquals}}
 
             {{#if hideAsset}}
-            <i class="fa fa-eye-slash"></i>
+            <i class="fa fa-eye-slash" style="float: right;"></i>
             {{/if}}
         </div>
     </div>
