--- a/frontend/src/modules/assetManagement/less/assetManagementModalTags.less
+++ b/frontend/src/modules/assetManagement/less/assetManagementModalTags.less
@@ -5,6 +5,7 @@
 
 .asset-management-modal-new-asset-inner .reg-form {
     padding: 0;
+    padding-bottom: 40px;
 }
 
 .asset-management-modal-new-asset-inner .form-group.tags .selectize-control {
