micro css adjustment

--- a/frontend/src/plugins/helpDialog/less/helpDialog.less
+++ b/frontend/src/plugins/helpDialog/less/helpDialog.less
@@ -187,6 +187,10 @@ a.at-button.toggle-icon {
     text-decoration: none;
     color: inherit;
   }
+
+  .help-dialog-back-button {
+    border-radius: 3px;
+  }
 }
 
 .help-dialog-content-wrapper {
