asset filters bug fixes

--- a/frontend/src/modules/assetManagement/templates/assetManagementSidebar.hbs
+++ b/frontend/src/modules/assetManagement/templates/assetManagementSidebar.hbs
@@ -79,7 +79,7 @@
     </div>
 
     <div class="sidebar-row">
-        <button class="asset-management-sidebar-filter-self sidebar-tag" data-filter-type="self">
+        <button class="asset-management-sidebar-filter-createdBy sidebar-tag" data-filter-type="createdBy">
             <span class="asset-management-sidebar-filter-other-inner">
                 <i class="fa fa-toggle-off"></i>{{t 'app.fileself' }}
             </span>
@@ -90,7 +90,7 @@
     </div>
 
         <div class="sidebar-row">
-        <button class="asset-management-sidebar-filter-hidden sidebar-tag" data-filter-type="hidden">
+        <button class="asset-management-sidebar-filter-hideAsset sidebar-tag" data-filter-type="hideAsset">
             <span class="asset-management-sidebar-filter-other-inner">
                 <i class="fa fa-toggle-off"></i>{{t 'app.filehidden' }}
             </span>
