added my assets filter on the upload asset modal page

--- a/frontend/src/modules/assetManagement/templates/assetManagementModalFilters.hbs
+++ b/frontend/src/modules/assetManagement/templates/assetManagementModalFilters.hbs
@@ -14,3 +14,12 @@
         <i class="fa-plus fa"></i>{{t 'app.addtag'}}
     </span>
 </button>
+
+<button class="asset-management-sidebar-filter-createdBy sidebar-tag" data-filter-type="createdBy">
+    <span class="asset-management-sidebar-filter-other-inner">
+        <i class="fa fa-toggle-off"></i>{{t 'app.fileself' }}
+    </span>
+    <span class="asset-management-sidebar-filter-image-icon">
+        <i class="fa fa-user"></i>
+    </span>
+</button>
