fixed issue with hover on bypass block

--- a/frontend/src/plugins/bypassblocks/less/bypassBlock.less
+++ b/frontend/src/plugins/bypassblocks/less/bypassBlock.less
@@ -1,4 +1,4 @@
-.button--skip-link:not(:focus):not(:hover) {
+.button--skip-link:not(:focus) {
     transform: translateY(-4em);
     opacity: 0;
 }
