more fixes for bypass block

--- a/frontend/src/plugins/bypassblocks/less/bypassBlock.less
+++ b/frontend/src/plugins/bypassblocks/less/bypassBlock.less
@@ -1,6 +1,7 @@
-.button--skip-link:not(:focus) {
+.button--skip-link:not(:focus-visible) {
     transform: translateY(-4em);
     opacity: 0;
+    pointer-events: none;
 }
 
 .button--skip-link {
