--- a/frontend/src/modules/location/templates/locationTitle.hbs
+++ b/frontend/src/modules/location/templates/locationTitle.hbs
@@ -1,23 +1,25 @@
 <div class="location-title-inner">
   {{#if breadcrumbs}}
-    <div class="breadcrumbs">
-      {{#each breadcrumbs}}
-        <div class="item">
-          {{#if @last}}
-            {{title}}
-          {{else}}
-            {{#if url}}
-              <a href="{{url}}">{{title}}</a>
+    <nav aria-label="Breadcrumb" class="breadcrumbs">
+      <ol class="breadcrumbs-list">
+        {{#each breadcrumbs}}
+          <li class="item">
+            {{#if @last}}
+              <a href="{{url}}" aria-current="page">{{title}}</a>
             {{else}}
-              {{title}}
+              {{#if url}}
+                <a href="{{url}}">{{title}}</a>
+              {{else}}
+                {{title}}
+              {{/if}}
             {{/if}}
-          {{/if}}
-        </div>
-        {{#unless @last}}
-          <div class="separator unselectable">&gt;</div>
-        {{/unless}}
-      {{/each}}
-    </div>
+          </li>
+          {{#unless @last}}
+            <li aria-hidden="true" class="separator unselectable">&gt;</li>
+          {{/unless}}
+        {{/each}}
+      </ol>
+    </nav>
   {{/if}}
   {{#if title}}
     <div class="titles">
