fixed focus order issue on login page

--- a/frontend/src/plugins/bypassblocks/templates/bypassBlock.hbs
+++ b/frontend/src/plugins/bypassblocks/templates/bypassBlock.hbs
@@ -1,2 +1,5 @@
 <a href="#mainContent" class="bypass-block-btn button button--skip-link">{{{ t 'skip-to-main' }}}</a>
+
+{{#if showSkipToHelpDialog}}
 <a href="#fab-message-at-button" class="bypass-block-btn button button--skip-link">{{{ t 'skip-to-help-dialog' }}}</a>
+{{/if}}
