--- a/frontend/src/modules/user/templates/login.hbs
+++ b/frontend/src/modules/user/templates/login.hbs
@@ -17,9 +17,9 @@
                 <div id="loginError" class="display-none">
                     <i class="fa fa-times"></i><span id="loginErrorMessage"/>
                 </div>
-                <input type="email" autocomplete="email" class="login-input-username" value="" id="login-input-username" placeholder="{{t 'app.usernameoremail'}}" tabindex="1" />
-                <input type="password" autocomplete="current-password" class="login-input-password" value="" id="login-input-password" placeholder="{{t 'app.password'}}" tabindex="2" />
-                <button type="submit" class="btn secondary login-form-submit" tabindex="3">{{t 'app.login'}}</button>
+                <input type="email" autocomplete="email" class="login-input-username" value="" id="login-input-username" placeholder="{{t 'app.usernameoremail'}}" />
+                <input type="password" autocomplete="current-password" class="login-input-password" value="" id="login-input-password" placeholder="{{t 'app.password'}}" />
+                <button type="submit" class="btn secondary login-form-submit">{{t 'app.login'}}</button>
             </div>
             <div class="login-remember-me">
                 <input id="remember-me" class="remember-me-checkbox" name="remember-me" type="checkbox"/>
