--- a/frontend/src/modules/user/less/login.less
+++ b/frontend/src/modules/user/less/login.less
@@ -145,4 +145,17 @@
 .language-switcher {
   text-align: center;
   margin-bottom: 10px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translate(100%, 0);
+  .navigation-item {
+    display: inline-block;
+    height: 40px;
+    line-height: 40px;
+    text-decoration: underline;
+    margin: 0px;
+    padding: 0px 20px;
+    color: black;
+  }
 }
