--- a/routes/index/index.hbs
+++ b/routes/index/index.hbs
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="css/adapt.css" />
     <link rel="stylesheet" href="font-awesome-4.5.0/css/font-awesome.min.css">
     <script type="text/javascript" src="modernizr.js"></script>
-    <script src="//cdn.ckeditor.com/4.21.0/full-all/ckeditor.js"></script>
+    {{!-- <script src="//cdn.ckeditor.com/4.21.0/full-all/ckeditor.js"></script> --}}
+    <script src="//cdn.ckeditor.com/ckeditor5/40.2.0/classic/ckeditor.js"></script>
     {{#if isProduction}}
       <script type="text/javascript" src="require.js" data-main="js/origin.js{{#if dateStampAsString}}?{{dateStampAsString}}{{/if}}"></script>
     {{else}}
