replaced ckeditor4 with ckeditor5

--- a/frontend/src/modules/scaffold/less/textArea.less
+++ b/frontend/src/modules/scaffold/less/textArea.less
@@ -27,4 +27,13 @@
     background: @white;
     border-color: #ccc;
   }
+
+  .ck.ck-editor {
+    position: relative;
+    width: 90%;
+  }
+
+  .ck-editor__editable_inline {
+    min-height: 200px;
+  }
 }
