--- a/frontend/src/plugins/message/less/messageManagement.less
+++ b/frontend/src/plugins/message/less/messageManagement.less
@@ -1,6 +1,15 @@
 @import 'colours';
 
 .message-management {
+    .ck.ck-editor {
+        position: relative;
+        width: 90%;
+    }
+
+    .ck-editor__editable_inline {
+        min-height: 200px;
+    }
+
     .error-text {
         padding: 15px 30px;
         background-color: @alert-color;
