--- a/frontend/src/modules/scaffold/less/forms.less
+++ b/frontend/src/modules/scaffold/less/forms.less
@@ -94,7 +94,7 @@ form .error {
     padding: 5px;
     border-radius: 6px;
     margin: 10px 0;
-    background-color: @tertiary-color;
+    background-color: @adapt-primary-color;
     color: @white;
     opacity: 0;
     text-align: center;
