--- a/frontend/src/modules/editor/contentObject/less/editorMenuLayer.less
+++ b/frontend/src/modules/editor/contentObject/less/editorMenuLayer.less
@@ -2,7 +2,7 @@
   height: 100%;
   width:300px;
   float:left;
-  border-right: 1px solid #ddf2fa;
+  border-right: 1px solid #9fbaca;
   overflow:hidden;
 
   &.selected {
@@ -26,7 +26,6 @@
 .editor-menu-layer-controls {
   position:relative;
   padding: 20px;
-  border-bottom: 1px solid #d6f2f9;
   // FIXME this should be dynamic...
   height: 40px;
 
