--- a/frontend/src/modules/projects/less/qproject.less
+++ b/frontend/src/modules/projects/less/qproject.less
@@ -7,7 +7,7 @@
   overflow:hidden;
   border-radius:3px;
   background-color: @white;
-  color:#9d9d9d;
+  color: @adapt-primary-color;
   border: 1px solid #D6F2F9;
   box-shadow: 0px 0px 3pt 2pt transparent;
   text-align:center;
@@ -136,7 +136,7 @@
   }
 
   .projects-details-label {
-    color:#9d9d9d;
+    color: @adapt-primary-color;
     font-weight: @font-weight-bold;
     margin-bottom:4px;
   }
