navbar and color fixes

--- a/frontend/src/core/less/app.less
+++ b/frontend/src/core/less/app.less
@@ -37,7 +37,7 @@ span.error {
   text-align: center;
   opacity:1;
   transition: opacity 0.3s;
-  background-color: @adapt-primary-color;
+  background-color: @white;
 
   &.fade-out {
     opacity: 0;
