--- a/frontend/src/core/less/buttons.less
+++ b/frontend/src/core/less/buttons.less
@@ -97,6 +97,18 @@ button {
     }        
 }
 
+a.btn.primary-hollow.scaffold-items-modal-cancel { 
+    color: @adapt-primary-color;
+    background-color: @adapt-white;
+    border-color:@adapt-primary-color;
+
+    &:hover, &:focus {
+        color: @adapt-white;
+        background-color: @adapt-primary-color;
+        border-color:@adapt-primary-color;
+    }        
+}
+
 button.editor-menu-layer-add-menu.btn.primary-hollow {
     color: @adapt-primary-color;
     &:hover, &:focus {
