--- a/frontend/src/modules/navigation/less/navigation.less
+++ b/frontend/src/modules/navigation/less/navigation.less
@@ -9,7 +9,7 @@
   width:100%;
   height:60px;
   z-index:500;
-  background-color: @adapt-quaternary-color;
+  background-color: #105067;
   background-position: right;
   border-bottom:1px solid rgba(0,0,0,0.15);
   font-size: 15px;
