ui fixes for ckeditor5

--- a/routes/index/index.hbs
+++ b/routes/index/index.hbs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="font-awesome-4.5.0/css/font-awesome.min.css">
     <script type="text/javascript" src="modernizr.js"></script>
     <script type="text/javascript" src="core/ckeditor.js"></script>
+    <script type="text/javascript" src="core/ckeditorTranslationFr.js"></script>
     {{#if isProduction}}
       <script type="text/javascript" src="require.js" data-main="js/origin.js{{#if dateStampAsString}}?{{dateStampAsString}}{{/if}}"></script>
     {{else}}
