fixed ckeditor5 issues in message management

--- a/frontend/src/plugins/message/templates/messageManagement.hbs
+++ b/frontend/src/plugins/message/templates/messageManagement.hbs
@@ -22,6 +22,7 @@
                       <textarea id="generalRibbonEN">
                         {{generalRibbonEN}}
                       </textarea>
+                      <div id="generalRibbonENWordCount"></div>
                     </div>
                     <div class="field">
                       <label for="cke_generalRibbonFR">{{t 'app.message.generalRibbonFR'}}
@@ -30,6 +31,7 @@
                       <textarea id="generalRibbonFR">
                         {{generalRibbonFR}}
                       </textarea>
+                      <div id="generalRibbonFRWordCount"></div>
                     </div>
                     <div class="field">
                       <label class="label-picker" for="generalRibbonBgColor">{{t 'app.message.generalRibbonBgColor'}}
