added styling to ckeditor5 to make editor scrollable

--- a/frontend/src/modules/scaffold/less/textArea.less
+++ b/frontend/src/modules/scaffold/less/textArea.less
@@ -36,4 +36,11 @@
   .ck-editor__editable_inline {
     min-height: 200px;
   }
+
+  .ck-editor__editable {
+    /* Set a fixed height for the editor container */
+    height: 300px;
+    /* Add scrollbars if the content exceeds the height */
+    overflow-y: auto;
+  }
 }
