override ck sticky panel css

--- a/frontend/src/modules/scaffold/less/textArea.less
+++ b/frontend/src/modules/scaffold/less/textArea.less
@@ -43,4 +43,8 @@
     /* Add scrollbars if the content exceeds the height */
     overflow-y: auto;
   }
+
+  .ck.ck-sticky-panel .ck-sticky-panel__content_sticky {
+      position: unset;
+  }
 }
