fixed ol li styling issue in help dialog

--- a/frontend/src/core/less/_reset.less
+++ b/frontend/src/core/less/_reset.less
@@ -12,6 +12,10 @@ ul li {margin-left:20px;}
 ol li {
     margin-left: 20px;
 }
+ol.breadcrumbs-list li {
+    margin-left: 0;
+    /* or whatever value you want for breadcrumbs-list */
+}
 blockquote, q {quotes: none;}
 blockquote:before, blockquote:after, q:before,
 q:after {content: ''; content: none;}
