copy paste button color fix

--- a/frontend/src/core/less/buttons.less
+++ b/frontend/src/core/less/buttons.less
@@ -117,6 +117,24 @@ button.editor-menu-layer-add-menu.btn.primary-hollow {
     }        
 }
 
+a.editor-paste-zone-cancel.paste-cancel.btn.action-secondary {
+    color: @adapt-primary-color;
+    &:hover, &:focus {
+        color: @button-primary-hover-text-color;
+        background-color: @adapt-primary-color;
+    }        
+}
+
+button.btn.tertiary.changePassword {
+    color: @adapt-primary-color;
+    border:1px solid @adapt-primary-color;
+    &:hover, &:focus {
+        color: @button-primary-hover-text-color;
+        background-color: @adapt-primary-color;
+        border:1px solid @adapt-primary-color;
+    }        
+}
+
 .field i.fa {
     color: @adapt-primary-color;
     &:hover, &:focus {
