--- a/frontend/src/core/less/colours.less
+++ b/frontend/src/core/less/colours.less
@@ -10,6 +10,7 @@
 @adapt-primary-color:#263944; // light blue (used in most places such as buttons) & sidebar
 @adapt-secondary-color:#008055; // green (used as a secondary button)
 @adapt-tertiary-color:#fff;
+@adapt-topbar-color:#105067;
 @adapt-quaternary-color:#424343; //
 @adapt-white:#fff;
 ////////////
