icons color adjust

--- a/frontend/src/modules/editor/global/less/editor.less
+++ b/frontend/src/modules/editor/global/less/editor.less
@@ -160,7 +160,7 @@
 
 .editor-item-settings button,
 .editor-menu-item-settings button {
-  color: @primary-color;
+  color: @adapt-topbar-color;
   transition: all 0.3s;
   &:hover {
     color:darken(@primary-color,5%);
