--- a/frontend/src/modules/editor/contentObject/less/editorPage.less
+++ b/frontend/src/modules/editor/contentObject/less/editorPage.less
@@ -107,10 +107,10 @@
 .page-edit-button {
   font-size:16px;
   text-decoration: none;
-  color: @primary-color;
+  color: @adapt-topbar-color;
   transition: all 0.3s;
   &:hover {
-    color: darken(@primary-color, 5%);
+    color: darken(@adapt-topbar-color, 5%);
   }
 }
 
