--- a/frontend/src/core/less/app.less
+++ b/frontend/src/core/less/app.less
@@ -65,7 +65,7 @@ span.error {
     > div {
       width: @loading-icon-size;
       height: @loading-icon-size;
-      background-color: @white;
+      background-color: #000;
       margin: 0 @loading-icon-size/3 0 @loading-icon-size/3;
 
       border-radius: 100%;
