--- a/frontend/src/modules/user/less/loginNavigationBar.less
+++ b/frontend/src/modules/user/less/loginNavigationBar.less
@@ -13,7 +13,7 @@
   top: 0px;
   left: 0px;
   width: 100%;
-  height: 60px;
+  height: 30px;
   z-index: 500;
   background-color: @white;
   background-position: right;
@@ -23,17 +23,14 @@
 }
 
 .login-navigation-right {
-  padding-right: 20px;
-  float: right;
-  text-align: right;
+    margin-right: 30px;
+    height: inherit;
+    display: flex;
+    align-items: center;
 }
 
 .login-navigation-item {
   display: inline-block;
-  height: 40px;
-  line-height: 40px;
-  text-decoration: none;
   margin: 0px;
-  padding: 10px;
   margin-left: auto;
 }
