color change dashboard gear & filter icons

--- a/frontend/src/modules/options/less/options.less
+++ b/frontend/src/modules/options/less/options.less
@@ -19,7 +19,7 @@
   button {
     text-decoration: none;
     text-align: center;
-    color: @option-color;
+    color: @adapt-topbar-color;
 
     &:hover {
       transition: color 0.3s;
