--- a/frontend/src/modules/projects/less/qproject.less
+++ b/frontend/src/modules/projects/less/qproject.less
@@ -86,7 +86,7 @@
 
   .project-detail-title-inner,
   .project-settings a {
-    color: @primary-color;
+    color: @adapt-topbar-color;
     font-weight: @font-weight;
   }
 
