--- a/frontend/src/modules/scaffold/less/textArea.less
+++ b/frontend/src/modules/scaffold/less/textArea.less
@@ -37,3 +37,11 @@
     min-height: 200px;
   }
 }
+
+.ck-help {
+    background: #ccced1;
+    color: #000;
+    width: calc(90% - 20px);
+    display: inline-block;
+    padding: 10px;
+}
