added ck font-sizes styles to aat

--- a/frontend/src/core/less/fonts.less
+++ b/frontend/src/core/less/fonts.less
@@ -28,3 +28,11 @@ button, input, textarea {
   font-family: @font-family;
   font-size: @font-size;
 }
+
+.text-big {
+    font-size: 140%;
+}
+
+.text-huge {
+    font-size: 180%;
+}
