--- a/frontend/src/modules/projects/less/projects.less
+++ b/frontend/src/modules/projects/less/projects.less
@@ -136,7 +136,7 @@ ul.projects-options {
     text-align:center;
     font-size: 16px;
     margin-top: 10%;
-    color: @tertiary-color;
+    color: @adapt-primary-color;
 }
 
 .sidebar-search-tag {
