basic implementation of extra info on fields

--- a/frontend/src/modules/scaffold/less/forms.less
+++ b/frontend/src/modules/scaffold/less/forms.less
@@ -167,3 +167,14 @@ form .error {
     display: block;
   }
 }
+
+.field-secondary-info {
+    display: inline-block;
+    margin-top: 5px;
+    font-style: italic;
+    width: 90%;
+}
+
+.scaffold-items-modal-sidebar .field-secondary-info {
+    width: 80%;
+}
