--- a/frontend/src/modules/scaffold/templates/field.hbs
+++ b/frontend/src/modules/scaffold/templates/field.hbs
@@ -1,5 +1,7 @@
 {{! ESDC - modified interpolation to use new translated labels }}
-<div class="field{{#if title}} field-{{stringToClassName title}}{{else}}{{#if legend}} field-object field-object-{{stringToClassName legend}}{{/if}}{{/if}}{{#if isDefaultValue}} is-default-value{{/if}}" data-editor-id="{{editorId}}" data-type="{{#if inputType.type}}{{inputType.type}}{{else}}{{inputType}}{{/if}}">
+<div
+  class="field{{#if title}} field-{{stringToClassName title}}{{else}}{{#if legend}} field-object field-object-{{stringToClassName legend}}{{/if}}{{/if}}{{#if isDefaultValue}} is-default-value{{/if}}"
+  data-editor-id="{{editorId}}" data-type="{{#if inputType.type}}{{inputType.type}}{{else}}{{inputType}}{{/if}}">
   {{#if title}}
   <label for="{{editorId}}" title="{{key}}">{{titleLabel}}</label>
   {{#if help}}
@@ -19,6 +21,9 @@
   <button class="field-default" data-action="default" title="{{t 'app.reset'}}">
     <i class="fa fa-undo"></i>
   </button>
+  {{#ifEquals fieldType "Object"}}
+  <span class="field-secondary-info">{{{secondaryLabel}}}</span>
+  {{/ifEquals}}
   {{else}}
   {{#if legend}}
   <div class="legend">
@@ -31,7 +36,11 @@
     <div class="field-error" data-error></div>
     <span data-editor></span>
   </div>
+
+  {{#ifNotEquals fieldType "Object"}}
   {{#if secondaryLabel}}
   <span class="field-secondary-info">{{{secondaryLabel}}}</span>
   {{/if}}
+  {{/ifNotEquals}}
+
 </div>
