made the new labels optional and translatable

--- a/frontend/src/modules/scaffold/templates/field.hbs
+++ b/frontend/src/modules/scaffold/templates/field.hbs
@@ -22,7 +22,9 @@
     <i class="fa fa-undo"></i>
   </button>
   {{#ifEquals fieldType "Object"}}
-  <span class="field-secondary-info">{{{secondaryLabel}}}</span>
+    {{#if secondaryLabel}}
+    <span class="field-secondary-info">{{{secondaryLabel}}}</span>
+    {{/if}}
   {{/ifEquals}}
   {{else}}
   {{#if legend}}
