--- a/frontend/src/modules/user/less/loginNavigationBar.less
+++ b/frontend/src/modules/user/less/loginNavigationBar.less
@@ -13,9 +13,9 @@
   top: 0px;
   left: 0px;
   width: 100%;
-  height: 30px;
+  height: 60px;
   z-index: 500;
-  background-color: @white;
+  background-color: @adapt-topbar-color;
   background-position: right;
   border-bottom: 1px solid rgba(0, 0, 0, 0.15);
   font-size: 15px;
@@ -33,4 +33,11 @@
   display: inline-block;
   margin: 0px;
   margin-left: auto;
+}
+
+.login-navigation-bar .langspot {
+    color: @adapt-white;
+    span {
+        color: @adapt-white!important;
+    }
 }
