--- a/frontend/src/modules/user/less/loginNavigationBar.less
+++ b/frontend/src/modules/user/less/loginNavigationBar.less
@@ -35,9 +35,13 @@
   margin-left: auto;
 }
 
-.login-navigation-bar .langspot {
+.login .langspot {
     color: @adapt-white;
     span {
         color: @adapt-white!important;
+    }
+    text-decoration: none;
+    &:hover {
+        text-decoration: underline;
     }
 }
