fixed padding issue in range editor

--- a/frontend/src/modules/scaffold/less/scaffoldRange.less
+++ b/frontend/src/modules/scaffold/less/scaffoldRange.less
@@ -8,6 +8,10 @@
 @item-text-disabled-color: #F57C00;
 @item-disabled-color: #FFCC80;
 
+div[name="componentWidthRatio"] .component-inner {
+    padding-left: 0;
+}
+
 .rangeslider,
 .rangeslider__fill {
     display: block;
