--- a/frontend/src/modules/scaffold/templates/scaffoldRange.hbs
+++ b/frontend/src/modules/scaffold/templates/scaffoldRange.hbs
@@ -11,12 +11,14 @@
         <div class="slider-scale-marker component-item-color component-item-text-color a11y-ignore" aria-hidden="true"
           tabindex="-1"></div>
       </div>
-      <div class="slider-scaler-wrapper clearfix">
-        <div class="slider-scaler component-item-color">
-          <div class='slider-line component-item-color' style="width: 21px; background-color: #ccced1;"></div>
-          <div class="slider-scale-start-marker slider-line component-item-color"></div>
-          <div class="slider-markers"></div>
-          <div class="slider-scale-end-marker slider-line component-item-color"></div>
+      <div class="scale-wrapper" style="width: {{rangeDimension}}px">
+        <div class="slider-scaler-wrapper clearfix">
+          <div class="slider-scaler component-item-color">
+            <div class='slider-line component-item-color' style="width: 21px; background-color: #ccced1;"></div>
+            <div class="slider-scale-start-marker slider-line component-item-color"></div>
+            <div class="slider-markers"></div>
+            <div class="slider-scale-end-marker slider-line component-item-color"></div>
+          </div>
         </div>
       </div>
 
