added translations for the range editor and improved the logic for handling model schema extensions in contentmanager

--- a/frontend/src/modules/scaffold/less/scaffoldRange.less
+++ b/frontend/src/modules/scaffold/less/scaffoldRange.less
@@ -302,6 +302,10 @@ input[type="range"]:focus+.rangeslider .rangeslider__handle {
             border: none;
             background-color: @item-color;
 
+            &.hovered {
+                background-color: @item-hover-color;
+            }
+
             &:after {
                 content: none;
             }
