--- a/frontend/src/modules/scaffold/templates/scaffoldAsset.hbs
+++ b/frontend/src/modules/scaffold/templates/scaffoldAsset.hbs
@@ -53,7 +53,7 @@
     <input type="text" class="scaffold-asset-external-input-field" />
     <div class="scaffold-asset-external-input-buttons">
       <button class="btn primary scaffold-asset-external-input-save">{{t 'app.save'}}</button>
-      <button class="btn primary-hollow scaffold-asset-external-input-cancel">{{t 'app.cancel'}}</button>
+      <button class="btn scaffold-asset-external-input-cancel">{{t 'app.cancel'}}</button>
     </div>
   </div>
 
