--- a/frontend/src/modules/scaffold/templates/scaffoldItemsModal.hbs
+++ b/frontend/src/modules/scaffold/templates/scaffoldItemsModal.hbs
@@ -8,7 +8,7 @@
     <div class="scaffold-items-modal-body">{{content}}</div>
     <div class="scaffold-items-modal-footer">
       <a href="#" class="btn primary scaffold-items-modal-ok" data-action="ok">{{t 'app.ok'}}</a>
-      <a href="#" class="btn primary-hollow scaffold-items-modal-cancel" data-action="cancel">{{t 'app.cancel'}}</a>
+      <a href="#" class="btn scaffold-items-modal-cancel" data-action="cancel">{{t 'app.cancel'}}</a>
     </div>
   </div>
 </div>
