padding fix for narrative width slider

--- a/frontend/src/modules/scaffold/less/scaffoldRange.less
+++ b/frontend/src/modules/scaffold/less/scaffoldRange.less
@@ -12,6 +12,10 @@ div[name="componentWidthRatio"] .component-inner {
     padding-left: 0;
 }
 
+div[name="narrativeWidthRatio"] .component-inner {
+    padding-left: 0;
+}
+
 .rangeslider,
 .rangeslider__fill {
     display: block;
