--- a/routes/index/index.hbs
+++ b/routes/index/index.hbs
@@ -1,35 +1,41 @@
 <!DOCTYPE html>
 <html lang="en" data-adapt-framework-version="{{adapt_framework}}" data-adapt-authoring-version="{{adapt_authoring}}">
-  <head>
-    <title>{{productName}}</title>
-    <link rel="icon" type="image/png" href="css/assets/favicon.png" />
-    <link rel="stylesheet" href="css/adapt.css" />
-    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-    <script type="text/javascript" src="modernizr.js"></script>
-    <script type="text/javascript" src="ckeditorTranslationFr.js"></script>
-    <script type="text/javascript" src="ckeditor.js"></script>
-    {{#if isProduction}}
-      <script type="text/javascript" src="require.js" data-main="js/origin.js{{#if dateStampAsString}}?{{dateStampAsString}}{{/if}}"></script>
-    {{else}}
-      <script type="text/javascript" src="require.js"></script>
-      <script type="text/javascript" src="core/config.js"></script>
-      <script type="text/javascript" src="core/app.js"></script>
-    {{/if}}
-    <meta http-equiv="cache-control" content="no-store, no-cache, must-revalidate" />
-    <meta http-equiv="Pragma" content="no-store, no-cache" />
-    <meta http-equiv="Expires" content="0" />
-    {{#if useAnalytics}}
-    <!-- Google Analytics -->
-    <script>
-      window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-      ga('create', '{{trackingId}}', 'auto');
-      ga('send', 'pageview');
-    </script>
-    <script async src='//www.google-analytics.com/analytics.js'></script>
-    <!-- End Google Analytics -->
-    {{/if}}
-  </head>
-  <body>
+
+<head>
+  <title>{{productName}}</title>
+  <link rel="icon" type="image/png" href="css/assets/favicon.png" />
+  <link rel="stylesheet" href="css/adapt.css" />
+  <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+  <script type="text/javascript" src="modernizr.js"></script>
+  <script type="text/javascript" src="ckeditorTranslationFr.js"></script>
+  <script type="text/javascript" src="ckeditor.js"></script>
+  {{#if isProduction}}
+  <script type="text/javascript" src="require.js"
+    data-main="js/origin.js{{#if dateStampAsString}}?{{dateStampAsString}}{{/if}}"></script>
+  {{else}}
+  <script type="text/javascript" src="require.js"></script>
+  <script type="text/javascript" src="core/config.js"></script>
+  <script type="text/javascript" src="core/app.js"></script>
+  {{/if}}
+  <meta http-equiv="cache-control" content="no-store, no-cache, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-store, no-cache" />
+  <meta http-equiv="Expires" content="0" />
+  {{#if useAnalytics}}
+  <!-- Google Analytics -->
+  <script>
+    window.ga = window.ga || function () { (ga.q = ga.q || []).push(arguments) }; ga.l = +new Date;
+    ga('create', '{{trackingId}}', 'auto');
+    ga('send', 'pageview');
+  </script>
+  <script async src='//www.google-analytics.com/analytics.js'></script>
+  <!-- End Google Analytics -->
+  {{/if}}
+</head>
+
+<body class="test">
+  <nav id="navigation_container"></nav>
+  <div id="content_wrapper">
+    <div id="sidebar_container"></div>
     <div id="app" class="app container">
       <div tabindex="0" id="mainContent" class="location-title">
       </div>
@@ -38,7 +44,7 @@
       <div class="loading">
         <div class="loading-inner">
           <div class="loading-logo">
-              <img src="css/assets/adapt-learning-logo-outline.png">
+            <img src="css/assets/adapt-learning-logo-outline.png">
           </div>
           <div class="loading-anim">
             <div class="circle1"></div>
@@ -48,5 +54,7 @@
         </div>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
