--- a/frontend/src/modules/navigation/less/navigation.less
+++ b/frontend/src/modules/navigation/less/navigation.less
@@ -7,11 +7,10 @@
   top:0px;
   left:0px;
   width:100%;
-  height:60px;
+  height:50px;
   z-index:500;
   background-color: @adapt-topbar-color;
   background-position: right;
-  border-bottom:1px solid rgba(0,0,0,0.15);
   font-size: 15px;
   font-family: @font-title;
   box-shadow: 0px 3px 3px -3px #2a2a2a;
@@ -26,7 +25,10 @@
 }
 
 .navigation-inner {
-    padding-top: 10px;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
 }
 
 .navigation-item {
@@ -51,8 +53,7 @@
 
 .navigation-right {
   padding-right: 20px;
-	float:right;
-	text-align:right;
+  margin-left: auto;
 
   .navigation-user-logout {
     padding: 0px 25px;
@@ -65,5 +66,47 @@
         text-decoration: none;
       }
     }
+  }
+
+  .profile-dropbtn {
+      background-color: #ffff;
+      color: #000;
+      padding: 16px;
+      font-size: 16px;
+      border: none;
+      border-radius: 50px;
+      cursor: pointer;
+  }
+
+  .dropbtn:hover,
+  .dropbtn:focus {
+      background-color: #3e8e41;
+  }
+
+  .profile-dropdown-menu {
+      position: relative;
+      display: inline-block;
+  }
+
+  .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #f1f1f1;
+      min-width: 300px;
+      overflow: auto;
+      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+      right: 0;
+      z-index: 1;
+  }
+
+  .dropdown-content a {
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+  }
+
+  .dropdown a:hover {
+      background-color: #ddd;
   }
 }
