improved navigation css

--- a/frontend/src/modules/globalMenu/less/globalMenu.less
+++ b/frontend/src/modules/globalMenu/less/globalMenu.less
@@ -2,10 +2,11 @@
 
 .global-menu {
   display:none;
-  top:61px;
+  top:60px;
   position:absolute;
   width:260px;
   background-color:@primary-color;
+  z-index: 5;
 
   a {
     display:block;
