--- a/frontend/src/modules/navigation/templates/navigation.hbs
+++ b/frontend/src/modules/navigation/templates/navigation.hbs
@@ -20,10 +20,11 @@
       <span lang="{{t 'app.langswitcherCode'}}">{{t 'app.langswitcher'}}</span>
     </a>
     <div class="profile-dropdown-menu">
-      <button class="profile-dropbtn">Dropdown</button>
+      <button class="profile-dropbtn">PC</button>
       <div id="profile-dropdown" class="dropdown-content">
+        <div><span>{{t 'app.loggedinas'}}:{{email}}</span></div>
         <a href="#" class="navigation-item navigation-profile" data-event="user:profile">
-          {{t 'app.loggedinas'}}: <span>{{email}}</span>
+          My profile
         </a>
         <a href="#" class="navigation-item navigation-user-logout btn white-hollow" data-event="user:logout">
           <span>{{t 'app.logout'}}</span>
