--- a/frontend/src/modules/navigation/less/navigation.less
+++ b/frontend/src/modules/navigation/less/navigation.less
@@ -4,7 +4,7 @@
 
 .navigation {
   width:100%;
-  height:50px;
+  height:60px;
   z-index:500;
   background-color: @adapt-topbar-color;
   background-position: right;
@@ -68,7 +68,6 @@
   .profile-dropbtn {
       background-color: #ffff;
       color: #000;
-      padding: 16px;
       font-size: 16px;
       border: none;
       border-radius: 50px;
@@ -83,13 +82,15 @@
   .profile-dropdown-menu {
       position: relative;
       display: inline-block;
+      z-index: 6;
   }
 
   .dropdown-content {
       display: none;
-      position: absolute;
+      position: fixed;
+      top: 60px;
       background-color: #f1f1f1;
-      min-width: 300px;
+      width: 300px;
       overflow: auto;
       box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
       right: 0;
@@ -98,10 +99,19 @@
 
   .dropdown-content a {
       color: black;
-      padding: 12px 16px;
+      padding: 12px 20px;
       text-decoration: none;
       display: block;
   }
+
+  .dropdown-content div span {
+      color: black;
+      padding: 12px 20px;
+      text-decoration: none;
+      display: block;
+      text-overflow: ellipsis;
+      max-width: 300px;
+   }
 
   .dropdown a:hover {
       background-color: #ddd;
