--- a/frontend/src/modules/navigation/less/navigation.less
+++ b/frontend/src/modules/navigation/less/navigation.less
@@ -3,22 +3,22 @@
 @import 'sharedStyles';
 
 .navigation {
-  width:100%;
-  height:60px;
-  z-index:500;
-  background-color: @adapt-topbar-color;
-  background-position: right;
-  font-size: 15px;
-  font-family: @font-title;
-  box-shadow: 0px 3px 3px -3px #2a2a2a;
+    width: 100%;
+    height: 60px;
+    z-index: 500;
+    background-color: @adapt-topbar-color;
+    background-position: right;
+    font-size: 15px;
+    font-family: @font-title;
+    box-shadow: 0px 3px 3px -3px #2a2a2a;
 }
 
 .navigation-bg {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  z-index: -1;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    z-index: -1;
 }
 
 .navigation-inner {
@@ -29,91 +29,115 @@
 }
 
 .navigation-item {
-  display:inline-block;
-  height:40px;
-  line-height:40px;
-  text-decoration:none;
-  margin:0px;
-  padding:0px 20px;
-  color:@navigation-text-color;
-  .navigation-left & {
-    float:left;
-  }
+    display: inline-block;
+    height: 40px;
+    line-height: 40px;
+    text-decoration: none;
+    margin: 0px;
+    padding: 0px 20px;
+    color: @navigation-text-color;
+
+    .navigation-left & {
+        float: left;
+    }
 }
 
 .navigation-left {
-	float:left;
-  .navigation-product-name {
-    .no-select;
-  }
+    float: left;
+
+    .navigation-product-name {
+        .no-select;
+    }
 }
 
 .navigation-right {
-  padding-right: 20px;
-  margin-left: auto;
+    padding-right: 20px;
+    margin-left: auto;
 
-  .navigation-user-logout {
-    padding: 0px 25px;
-  }
-
-  a {
-    &:hover {
-    text-decoration: underline;
-      &.navigation-user-logout {
-        text-decoration: none;
-      }
+    .navigation-user-logout {
+        padding: 0px 25px;
     }
-  }
 
-  .profile-dropbtn {
-      background-color: #ffff;
-      color: #000;
-      font-size: 16px;
-      border: none;
-      border-radius: 50px;
-      cursor: pointer;
-  }
+    a {
+        &:hover {
+            text-decoration: underline;
 
-  .dropbtn:hover,
-  .dropbtn:focus {
-      background-color: #3e8e41;
-  }
+            &.navigation-user-logout {
+                text-decoration: none;
+            }
+        }
+    }
 
-  .profile-dropdown-menu {
-      position: relative;
-      display: inline-block;
-      z-index: 6;
-  }
+    .profile-dropbtn {
+        background-color: #ffff;
+        color: #000;
+        font-size: 16px;
+        border: none;
+        border-radius: 50px;
+        cursor: pointer;
+        &:hover {
+            background-color: #c3c1c1;
+        }
+        &:focus-visible {
+            outline: -webkit-focus-ring-color auto 1px;
+            background-color: #c3c1c1;
+        }
 
-  .dropdown-content {
-      display: none;
-      position: fixed;
-      top: 60px;
-      background-color: #f1f1f1;
-      width: 300px;
-      overflow: auto;
-      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-      right: 0;
-      z-index: 1;
-  }
+    }
 
-  .dropdown-content a {
-      color: black;
-      padding: 12px 20px;
-      text-decoration: none;
-      display: block;
-  }
+    .profile-dropbtn, .dropdown-content a {
+        transition: all 0.5s;
+    }
 
-  .dropdown-content div span {
-      color: black;
-      padding: 12px 20px;
-      text-decoration: none;
-      display: block;
-      text-overflow: ellipsis;
-      max-width: 300px;
-   }
+    .dropbtn:hover,
+    .dropbtn:focus {
+        background-color: #3e8e41;
+    }
 
-  .dropdown a:hover {
-      background-color: #ddd;
-  }
+    .profile-dropdown-menu {
+        position: relative;
+        display: inline-block;
+        z-index: 6;
+    }
+
+    .dropdown-content {
+        display: none;
+        position: fixed;
+        top: 60px;
+        background-color: #f1f1f1;
+        width: 300px;
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        right: 0;
+        z-index: 1;
+    }
+
+    .dropdown-content a {
+        background-color: #e1e1e1;
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+
+
+    .dropdown-content a:hover, .dropdown-content a:focus-visible {
+        background-color: #c3c1c1;
+    }
+
+    .dropdown-content .profile-user-info {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        max-width: 300px;
+        overflow: hidden;
+
+        span {
+            display: inline-block;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            max-width: 275px;
+        }
+    }
 }
