--- a/frontend/src/modules/user/templates/forgotPassword.hbs
+++ b/frontend/src/modules/user/templates/forgotPassword.hbs
@@ -1,5 +1,14 @@
 {{importConstants}}
 
+<div class="login-navigation-bar-bg">
+  <div class="login-navigation-right">
+    <a href="#" class="langspot login-navigation-item aut" onclick="togglelang()">
+      {{! ESDC - added translation handler for language name}}
+      <span lang="{{t 'app.langswitcherCode'}}">{{t 'app.langswitcher'}}</span>
+    </a>
+  </div>
+</div>
+
 <div class="login-logo"></div>
 
 <div class="login-title">{{t 'app.resetpassword'}}</div>
