--- a/frontend/src/modules/user/templates/resetPassword.hbs
+++ b/frontend/src/modules/user/templates/resetPassword.hbs
@@ -1,3 +1,12 @@
+<div class="login-navigation-bar-bg">
+  <div class="login-navigation-right">
+    <a href="#" class="langspot login-navigation-item aut" onclick="togglelang()">
+      {{! ESDC - added translation handler for language name}}
+      <span lang="{{t 'app.langswitcherCode'}}">{{t 'app.langswitcher'}}</span>
+    </a>
+  </div>
+</div>
+
 <div class="inner">
   <div class="login-logo"></div>
 
